[package]
name = "nrfind"
version = "0.2.1"
authors = ["SilverWingedSeraph <lfstindall@gmail.com>"]
description = "A set of useful mathematical functions for floating point numbers based on the Newton-Raphson method for finding roots."

repository = "https://github.com/SilverWingedSeraph/nrfind"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/nrfind"

[dependencies]
num = "0.1.36"
