[package]
name = "nrfind"
version = "1.0.1"
authors = ["Leo Tindall <lfstindall@gmail.com>"]
description = "A set of useful mathematical functions for floating point numbers based on the Newton-Raphson method for finding roots."

repository = "https://github.com/LeoTindall/nrfind"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/nrfind"

keywords = ["newton-raphson", "root", "numeric", "calculus"]
categories = ["algorithms", "science"]

[badges]
is-it-maintained-issue-resolution = {repository = "https://github.com/LeoTindall/nrfind"}
is-it-maintained-open-issues = {repository = "https://github.com/LeoTindall/nrfind"}
maintenance = { status = "passively-maintained" }

travis-ci = { repository = "LeoTindall/nrfind" }

[dependencies]
num = "0.1.40"
