[package]
name = "nrfind"
version = "1.1.0"
authors = ["Leonora Tindall <nora@nora.codes>"]
description = "A set of useful mathematical functions for floating point numbers based on the Newton-Raphson method for finding roots."

repository = "https://github.com/NoraCodes/nrfind"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/nrfind"

keywords = ["newton-raphson", "root", "numeric", "calculus"]
categories = ["algorithms", "science"]

[badges]
is-it-maintained-issue-resolution = {repository = "NoraCodes/nrfind"}
is-it-maintained-open-issues = {repository = "NoraCodes/nrfind"}
maintenance = { status = "passively-maintained" }

travis-ci = { repository = "NoraCodes/nrfind" }

[dependencies]
num = "0.2"
